--- a/index.html
+++ b/index.html
@@ -4,13 +4,56 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>A_Portfolio</title>
+    <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    <section>
-        <div>
-            
+                            <!--First Part-->
+    <section class="ryuk near">
+        <div class="kira hina" >
+            <h1>Hi,I am </h1>
+            <h1 id="musfiqur">Peter Parkar</h1>
+            <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Eligendi deleniti quo, quas nobis voluptatem corrupti!</p>
+            <a href="#" id="hireme">Hire Me</a>
+        </div>
+        <div class="kira">
+            <img id="aimg" src="images/peter.png" alt="Peter">
         </div>
     </section>
+                        <!--Second Part-->
+    <section class="ereh">
+        <div class="draken">
+            <img id="bimg" src="images/peter_dream.png" alt="Peter parker">
+        </div>
+        <div class="draken mikey">
+            <h1 id="bio">Biography</h1>
+            <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Soluta, quia quisquam? Libero repellat ad dolorum, quod corrupti doloremque natus harum animi! Sunt at id doloribus vel odit velit expedita corrupti .</p>
+            <a id="cv" href="#">Download My Cv</a>
+        </div>
+    </section>
+                         <!--Third Part-->
+    <section class="levi hange">
+        <h3 id="work">My Latest Works</h3>
+        <div id="all">
+        <div class="armin">
+            <img id="alpha" src="images/latest-work/work-1.png" alt="Work-1">
+        </div>
+        <div class="armin">
+            <img id="beta" src="images/latest-work/work-2.jpg" alt="Work-2">
+        </div>
+        <div class="armin">
+            <img id="gama" src="images/latest-work/work-3.jpg" alt="work-3">
+        </div>
+        </div>
+    </section>
+                        <!--Last Part-->
+    <section id="reiner">
+        <div id="rev">
+            <h3 id="work">Some Of My Reviews</h3>
+            <h3>Stan Lee</h3>
+            <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Ducimus voluptatibus minus asperiores, possimus id facilis.</p>
+        </div>
+    </section>
+    <footer>Musfiqur Rahman Khan</footer>
 </body>
 </html>
